--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,11 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Jokes</title>
+    <title>Chuck Norris Jokes</title>
 </head>
 <body>
-
-<span th:text="${joke}"/>
+<h1>Chuck Norris Jokes</h1>
+<p th:text="${joke}">Show Joke here ...</p>
 
 </body>
 </html>
